--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-	"id": "obsidian-plantuml",
-	"name": "PlantUML",
-	"version": "1.8.0",
+	"id": "my_obsidian-plantuml",
+	"name": "My PlantUML",
+	"version": "10.8.0",
 	"minAppVersion": "1.5.7",
 	"description": "Render PlantUML Diagrams",
 	"author": "Johannes Theiner",
