--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "node esbuild.config.mjs",
     "postdev": "node scripts/generateDevVersion.mjs",
     "build": "node esbuild.config.mjs production",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts",
+    "version": "node version-bump.mjs && git add manifest.json versions.json"
   },
   "keywords": [],
   "author": "Johannes Theiner",
